--- a/inventory-app/views/form_artist_detail.ejs
+++ b/inventory-app/views/form_artist_detail.ejs
@@ -2,51 +2,64 @@
 <html lang="en">
     <%- include("./partials/head.ejs") %>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg-light">
         <div class="row">
             <div class="col-sm-2">
                 <%- include("./partials/nav.ejs") %>
             </div>
             <div class="col-sm-4">
-                <h1><%= title %></h1>
+                <h1 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %></h1>
                 <form action="" method="post">
-                    <fieldset>
+                    <fieldset class="form-group">
                         <label for="first_name">First Name</label>
                         <input 
+                            class="form-control"
                             type="text" id="first_name" name="first_name" placeholder="First Name"
                             value=<%= artist?.first_name %>
                         >
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="form-group">
                         <label for="last_name">Last Name</label>
-                        <input 
+                        <input
+                            class="form-control" 
                             type="text" id="last_name" name="last_name" placeholder="Last Name"
                             value=<%= artist?.last_name %>
                         >
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="form-group">
                         <label for="d_o_b">Date Of Birth</label>
                         <input 
+                            class="form-control" 
                             type="date" id="d_o_b" name="d_o_b"
-                            value=<%= artist.dob_iso %>
+                            value=<%= artist?.dob_iso %>
                         >
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="form-group">
                         <label for="d_o_d">Date Of Death</label>
                         <input 
+                            class="form-control" 
                             type="date" id="d_o_d" name="d_o_d"
-                            value=<%= artist.dod_iso %>
+                            value=<%= artist?.dod_iso %>
                         >
                     </fieldset>
-                    <button type="submit">Submit</button>
+                    <button class="btn btn -lg btn-block btn-secondary" type="submit">Submit</button>
                 </form>
                 <hr>
                 <hr>
-                <ul>
-                    <% errors?.forEach(error => { %>
-                        <li><%= error.msg %></li>
-                    <% }) %>
+                <h2 class="rounded bg-warning text-dark border border-primary mt-2 pt-2 pb-2 text-center">List Of Errors If There's any: </h4>
+                <hr>
+                <hr>
+                <ul class="list-group list-group-flush">
+                    <% if(errors) { %>
+                        <% errors?.forEach(error => { %>
+                            <li class="alert alert-danger" role="alert"><%= error.msg %> </li>
+                        <% }) %>
+                    <% } else { %>
+                        <li class="list-group-item list-group-item-secondary">There are no Errors</li>
+                    <% } %>
                 </ul>
+                <hr>
+                <hr>
             </div>
         </div>
     </div>
