--- a/inventory-app/views/form_genre_detail.ejs
+++ b/inventory-app/views/form_genre_detail.ejs
@@ -8,24 +8,34 @@
                 <%- include("./partials/nav.ejs") %>
             </div>
             <div class="col-sm-4">
-                <h1><%= title %></h1>
+                <h1 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %></h1>
                 <form action="" method="post">
-                    <fieldset>
+                    <fieldset class="form-group">
                         <label for="name">Genre Name</label>
                         <input 
+                            class="form-control"
                             type="text" id="name" name="name" placeholder="Genre Name Goes Here...."
                             value=<%= genre?.name %>
                         >
                     </fieldset>
-                    <button type="submit">Submit</button>
+                    <button class="btn btn -lg btn-block btn-secondary" type="submit">Submit</button>
                 </form>
                 <hr>
                 <hr>
-                <ul>
-                    <% errors?.forEach(error => { %>
-                        <li><%= error.msg %> </li>
-                    <% }) %>
+                <h2 class="rounded bg-warning text-dark border border-primary mt-2 pt-2 pb-2 text-center">List Of Errors If There's any: </h4>
+                <hr>
+                <hr>
+                <ul class="list-group list-group-flush">
+                    <% if(errors) { %>
+                        <% errors?.forEach(error => { %>
+                            <li class="alert alert-danger" role="alert"><%= error.msg %> </li>
+                        <% }) %>
+                    <% } else { %>
+                        <li class="list-group-item list-group-item-secondary">There are no Errors</li>
+                    <% } %>
                 </ul>
+                <hr>
+                <hr>
             </div>
         </div>
     </div>
