--- a/inventory-app/views/form_track_detail.ejs
+++ b/inventory-app/views/form_track_detail.ejs
@@ -7,32 +7,40 @@
             <div class="col-sm-2">
                 <%- include("./partials/nav.ejs") %>
             </div>
-            <div class="col-sm-4">
-                <h1><%= title %></h1>
+            <div class="col-auto">
+                <h1 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %></h1>
                 <form action="" method="post">
-                    <fieldset>
+                    <fieldset class="form-group">
                         <label for="name">Track Name</label>
                         <input 
+                            class="form-control"
                             type="text" id="name" name="name" placeholder="Track Name Goes Here...."
                             value=<%= track?.name %>
                         >
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="form-group">
                         <label for="genre">Genre</label>
                         <div>
                             <% genres?.forEach(genre => { %>
-                                <input 
-                                    type="checkbox" name="genre" 
-                                    value=<%= genre._id %>
-                                    <%= genre.checked !== undefined ? "checked" : false %> 
-                                >
-                                <label for=<%= genre._id %>><%= genre.name %></label>
+                                <div class="form-check-inline">
+                                    <input 
+                                        class="form-check-input"
+                                        type="checkbox" name="genre" 
+                                        value=<%= genre._id %>
+                                        <%= genre.checked !== undefined ? "checked" : false %> 
+                                    >
+                                    <label 
+                                        class="form-check-label" 
+                                        for=<%= genre._id %>><%= genre.name %></label>
+                                </div>
                             <% }) %>
                         </div>
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="form-group">
                         <label for="album">Album</label>
-                        <select name="album" id="album" placeholder="Select Album">
+                        <select 
+                            class="form-control"
+                            name="album" id="album" placeholder="Select Album">
                             <% albums?.forEach(album => { %>
                                 <option 
                                     value=<%= album._id %>
@@ -41,24 +49,35 @@
                             <% }) %>
                         </select>
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="form-group">
                         <label for="status">Track Status</label>
-                        <select name="status" id="status">
+                        <select
+                            class="form-control"
+                            name="status" id="status">
                             <option value="Free">Free</option>
                             <option value="Preview">Preview</option>
                             <option value="Play">Play</option>
                             <option value="Download">Download</option>
                         </select>
                     </fieldset>
-                    <button type="submit">Submit</button>
+                    <button class="btn btn -lg btn-block btn-secondary" type="submit">Submit</button>
                 </form>
                 <hr>
                 <hr>
-                <ul>
-                    <% errors?.forEach(error => { %>
-                        <li><%= error.msg %> </li>
-                    <% }) %>
+                <h2 class="rounded bg-warning text-dark border border-primary mt-2 pt-2 pb-2 text-center">List Of Errors If There's any: </h4>
+                <hr>
+                <hr>
+                <ul class="list-group list-group-flush">
+                    <% if(errors) { %>
+                        <% errors?.forEach(error => { %>
+                            <li class="alert alert-danger" role="alert"><%= error.msg %> </li>
+                        <% }) %>
+                    <% } else { %>
+                        <li class="list-group-item list-group-item-secondary">There are no Errors</li>
+                    <% } %>
                 </ul>
+                <hr>
+                <hr>
             </div>
         </div>
     </div>
