album update GET and POST requests implemented

--- a/inventory-app/views/artist_detail.ejs
+++ b/inventory-app/views/artist_detail.ejs
@@ -47,7 +47,7 @@
                 <hr>
                 <hr>
                 <nav class="nav nav-pills row nav-fills">
-                    <a class="col nav-item btn btn-lg btn-info" href=<%= artist.url+"/update" %>>Upload</a>
+                    <a class="col nav-item btn btn-lg btn-info" href=<%= artist.url+"/update" %>>Update</a>
                     <a class="col nav-item btn btn-lg btn-danger" href=<%= artist.url+"/delete" %>>Delete</a>
                 </nav>
             </div>
