--- a/inventory-app/views/genre_detail.ejs
+++ b/inventory-app/views/genre_detail.ejs
@@ -39,7 +39,7 @@
                 <hr>
                 <hr>
                 <nav class="nav nav-pills row nav-fills">
-                    <a class="col nav-item btn btn-lg btn-info" href=<%= genre.url+"/update" %>>Upload</a>
+                    <a class="col nav-item btn btn-lg btn-info" href=<%= genre.url+"/update" %>>Update</a>
                     <a class="col nav-item btn btn-lg btn-danger" href=<%= genre.url+"/delete" %>>Delete</a>
                 </nav>
             </div>
