--- a/inventory-app/views/track_detail.ejs
+++ b/inventory-app/views/track_detail.ejs
@@ -31,7 +31,7 @@
                 <hr>
                 <hr>
                 <nav class="nav nav-pills row nav-fills">
-                    <a class="col nav-item btn btn-lg btn-info" href=<%= track.url+"/update" %>>Upload</a>
+                    <a class="col nav-item btn btn-lg btn-info" href=<%= track.url+"/update" %>>Update</a>
                     <a class="col nav-item btn btn-lg btn-danger" href=<%= track.url+"/delete" %>>Delete</a>
                 </nav>
             </div>
