--- a/inventory-app/views/album-detail.ejs
+++ b/inventory-app/views/album-detail.ejs
@@ -42,7 +42,7 @@
                 <hr>
                 <hr>
                 <nav class="nav nav-pills row nav-fills">
-                    <a class="col nav-item btn btn-lg btn-info" href=<%= album.url+"/update" %>>Upload</a>
+                    <a class="col nav-item btn btn-lg btn-info" href=<%= album.url+"/update" %>>Update</a>
                     <a class="col nav-item btn btn-lg btn-danger" href=<%= album.url+"/delete" %>>Delete</a>
                 </nav>
             </div>
