--- a/inventory-app/views/all-albums.ejs
+++ b/inventory-app/views/all-albums.ejs
@@ -28,7 +28,7 @@
                                                 <%= item.name %>
                                             </span></a></td>
                                     <td class="bg-secondary text-white"><span>
-                                            <%= item.artistName %>
+                                            <a href=<%= item.album_artist_url %>><%= item.artistName %></a>
                                         </span></td>
                                     <td class="bg-secondary text-white"><span>
                                             <%= item.price %>
