--- a/inventory-app/views/delete_album.ejs
+++ b/inventory-app/views/delete_album.ejs
@@ -8,19 +8,21 @@
                 <%- include("./partials/nav.ejs") %>
             </div>
             <div class="col-sm-4">
-                <h1><%= title %> </h1>
+                <h1 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %> </h1>
+                <hr>
+                <hr>
                 <% if(tracks?.length) { %>
-                    <h2>Delete these Tracks first</h2>
-                    <ul>
+                    <h2 class="rounded bg-secondary text-white border border-primary mt-2 pt-2 pb-2 text-center">Delete these Tracks first: </h2>
+                    <ul class="nav nav-pills nav-fill">
                         <% tracks.forEach(track => { %>
-                            <li><a href=<%= "/catalog/track/"+track._id %>><%= track.name %></a></li>
+                            <li class="col nav-item m-1 bg-warning list-group-item"><a class="nav-link btn btn-lg text-dark" href=<%= "/catalog/track/"+track._id %>><%= track.name %></a></li>
                         <% }) %>
                     </ul>
                 <% } else { %>
-                    <h2>Are you sure about deleting this album?</h2>
+                    <h3 class="rounded bg-secondary text-white border border-primary mt-2 pt-2 pb-2 text-center">Are you sure about deleting this album?</h3>
                     <form action="" method="post">
                         <input type="hidden" name="albumid" id="albumid" required="true" value=<%= album._id %>>
-                        <button type="submit">Delete</button>
+                        <button class="btn btn-lg btn-block bg-danger text-white" type="submit">Delete</button>
                     </form>
                 <% } %>
             </div>
