--- a/inventory-app/views/delete_track.ejs
+++ b/inventory-app/views/delete_track.ejs
@@ -8,11 +8,15 @@
                 <%- include("./partials/nav.ejs") %>
             </div>
             <div class="col-sm-4">
-                <h1><%= title %></h1>
-                <h3>Are you sure you want to delete this track</h3>
+                <h1 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %></h1>
+                <hr>
+                <hr>
+                <h3 class="rounded bg-secondary text-white border border-primary mt-2 pt-2 pb-2 text-center">Are you sure you want to delete this track</h3>
                 <form action="" method="post">
-                    <input type="hidden" name="trackid" id="trackid" required="true" value=<%= track._id %>>
-                    <button type="submit">Delete</button>
+                    <fieldset class="form-group">
+                        <input class="form-control" type="hidden" name="trackid" id="trackid" required="true" value=<%= track._id %>>
+                    </fieldset>
+                    <button class="btn btn-lg btn-block bg-danger text-white" type="submit">Delete</button>
                 </form>
             </div>
         </div>
