extra credit for genre * genre credit now also has an cover photo and renders it in detail file if there is any

--- a/inventory-app/views/album-detail.ejs
+++ b/inventory-app/views/album-detail.ejs
@@ -16,7 +16,7 @@
                         <% if(cover !== undefined) { %>
                             <tr>
                                 <th scope="row">Album Cover</th>
-                                <td class="bg-info"><img src=<%= "data:image/jpeg;base64,"+cover %>  alt="Album Cover"></td>
+                                <td class="bg-info"><img style="height: 200px;" src=<%= "data:image/jpeg;base64,"+cover %>  alt="Album Cover"></td>
                             </tr>
                         <% } %>
                         
