--- a/inventory-app/views/form_genre.ejs
+++ b/inventory-app/views/form_genre.ejs
@@ -9,7 +9,11 @@
             </div>
             <div class="col-sm-4">
                 <h1 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %></h1>
-                <form action="" method="post">
+                <form action="" method="post" enctype="multipart/form-data">
+                    <fieldset class="form-group">
+                        <label for="cover">Genre Cover</label>
+                        <input class="form-control" type="file" name="cover" id="cover">
+                    </fieldset>
                     <fieldset class="form-group">
                         <label for="name">Genre Name</label>
                         <input 
