update process is also addresses image * album now has cover photo update * artist now also has cover photo update * genre has cover photo update * made necessary changes to forms as well to make that happen

--- a/inventory-app/views/form_genre.ejs
+++ b/inventory-app/views/form_genre.ejs
@@ -12,7 +12,7 @@
                 <form action="" method="post" enctype="multipart/form-data">
                     <fieldset class="form-group">
                         <label for="cover">Genre Cover</label>
-                        <input class="form-control" type="file" name="cover" id="cover">
+                        <input class="form-control" type="file" name="cover" id="cover" value=<%= genre?.cover_img %> >
                     </fieldset>
                     <fieldset class="form-group">
                         <label for="name">Genre Name</label>
