--- a/inventory-app/views/form_album.ejs
+++ b/inventory-app/views/form_album.ejs
@@ -12,7 +12,7 @@
                 <form action="" method="post" enctype="multipart/form-data">
                     <fieldset class="form-group">
                         <label for="avatar">Album Photo</label>
-                        <input type="file" name="avatar" id="avatar">
+                        <input type="file" name="avatar" id="avatar" value=<%= album.img_file %>>
                     </fieldset>
                     <fieldset class="form-group">
                         <label for="name">Album Name</label>
