--- a/inventory-app/views/form_artist.ejs
+++ b/inventory-app/views/form_artist.ejs
@@ -12,7 +12,7 @@
                 <form action="" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <label for="cover-photo">Cover Photo</label>
-                        <input type="file" name="cover-photo" id="cover-photo">
+                        <input type="file" name="cover_photo" id="cover-photo" value=<%= artist?.cover_img %> >
                     </fieldset>
                     <fieldset class="form-group">
                         <label for="first_name">First Name</label>
