--- a/inventory-app/views/genre_detail.ejs
+++ b/inventory-app/views/genre_detail.ejs
@@ -17,7 +17,7 @@
                         <% if(genre.cover_img !== undefined) { %>
                             <tr>
                                 <th scope="row">Genre Cover</th>
-                                <td class="bg-info"><img src=<%= genre.cover_photo %>  alt="Genre Cover"></td>
+                                <td class="bg-info" style="text-align: center;"><img style="height: 200px;" src=<%= genre.cover_photo %>  alt="Genre Cover"></td>
                             </tr>
                         <% } %>
                         <tr>
