--- a/inventory-app/views/form_track.ejs
+++ b/inventory-app/views/form_track.ejs
@@ -60,6 +60,12 @@
                             <option value="Download">Download</option>
                         </select>
                     </fieldset>
+                    <% if(update_flag) { %>
+                        <fieldset class="form-group">
+                            <label for="admin">Admin Code</label>
+                            <input class="form-control" type="text" id="admin" name="admin_code" />
+                        </fieldset>
+                    <% } %>
                     <button class="btn btn -lg btn-block btn-secondary" type="submit">Submit</button>
                 </form>
                 <hr>
