--- a/inventory-app/views/delete_album.ejs
+++ b/inventory-app/views/delete_album.ejs
@@ -22,9 +22,27 @@
                     <h3 class="rounded bg-secondary text-white border border-primary mt-2 pt-2 pb-2 text-center">Are you sure about deleting this album?</h3>
                     <form action="" method="post">
                         <input type="hidden" name="albumid" id="albumid" required="true" value=<%= album._id %>>
+                        <fieldset class="form-group">
+                            <label for="admin">Admin Code (* required )</label>
+                            <input class="form-control" type="text" id="admin" name="admin_code" />
+                        </fieldset>
                         <button class="btn btn-lg btn-block bg-danger text-white" type="submit">Delete</button>
                     </form>
                 <% } %>
+
+                <br>
+                <br>
+                <h2 class="rounded bg-warning text-dark border border-primary mt-2 pt-2 pb-2 text-center">List Of Errors If There's any: </h4>
+                <ul class="list-group list-group-flush">
+                    <% if(errors) { %>
+                        <% errors?.forEach(error => { %>
+                            <li class="alert alert-danger" role="alert"><%= error.msg %> </li>
+                        <% }) %>
+                    <% } else { %>
+                        <li class="list-group-item list-group-item-secondary">There are no Errors</li>
+                    <% } %>
+                </ul>
+
             </div>
         </div>
     </div>
