--- a/inventory-app/views/all-artists.ejs
+++ b/inventory-app/views/all-artists.ejs
@@ -4,10 +4,10 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2">
+            <div class="col-sm-3">
                 <%- include("./partials/nav.ejs") %>
             </div>
-            <div class="col-md-6">
+            <div class="col">
                 <h1 class="rounded bg-secondary text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %> </h1>
                 <table class="table table-borderd text-center table-hover table-dark">
                     <caption>List of all artists</caption>
@@ -22,12 +22,12 @@
                     <tbody>
                         <% artists?.forEach(artist => { %>
                             <tr>
-                                <td><a class="text-white btn btn-sm" href=<%= artist.url %>><%= artist.full_name %></a></td>
-                                <td class="bg-secondary text-white"><%= artist.dob_format %></td>
-                                <td class="bg-secondary text-white"><%= artist.dod_format %></td>
+                                <td><a class="text-white btn btn-sm data-item" href=<%= artist.url %>><%= artist.full_name %></a></td>
+                                <td class="bg-secondary text-white align-middle"><%= artist.dob_format %></td>
+                                <td class="bg-secondary text-white align-middle"><%= artist.dod_format %></td>
                                 <% for(let key in artists_albums) { %>
                                     <% if(key == artist.full_name) { %>
-                                        <td class="bg-secondary text-white"><%= artists_albums[key] %></td>
+                                        <td class="bg-secondary text-white align-middle"><%= artists_albums[key] %></td>
                                     <% } %>
                                 <% } %>
                             </tr>
@@ -37,7 +37,7 @@
                 <hr>
                 <hr>
                 <nav class="nav nav-pills row nav-fills">
-                    <a class="col nav-item btn btn-lg btn-info" href=<%= "/catalog/artist/create" %>>Create Artist</a>
+                    <a class="col nav-item btn btn-lg btn-info form-btn" href=<%= "/catalog/artist/create" %>>Create Artist</a>
                 </nav>
             </div>
         </div>
