--- a/inventory-app/views/all-genres.ejs
+++ b/inventory-app/views/all-genres.ejs
@@ -4,10 +4,10 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2">
+            <div class="col-sm-3">
                 <%- include("./partials/nav.ejs") %>
             </div>
-            <div class="col-md-6">
+            <div class="col">
                 <h1 class="rounded bg-secondary text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %></h1>
                 <table class="table text-center table-hover table-dark">
                     <caption>List of all genres</caption>
@@ -20,10 +20,10 @@
                     <tbody>
                         <% genres?.forEach(genre => { %>
                             <tr>
-                                <td><a class="text-white btn btn-sm" href=<%= genre.url %> ><%= genre.name %></a></td>
+                                <td><a class="text-white btn btn-sm data-item" href=<%= genre.url %> ><%= genre.name %></a></td>
                                 <% for(let key in genres_albums) { %>
                                     <% if(key == genre.name && genres_albums[key] !== undefined) { %>
-                                        <td class="bg-secondary text-white"><%= genres_albums[key] %></td>
+                                        <td class="bg-secondary text-white align-middle"><%= genres_albums[key] %></td>
                                     <% } %>
                                 <% } %>
                             </tr>
@@ -33,7 +33,7 @@
                 <hr>
                 <hr>
                 <nav class="nav nav-pills row nav-fills">
-                    <a class="col nav-item btn btn-lg btn-info" href=<%= "/catalog/genre/create" %>>Create Genre</a>
+                    <a class="col nav-item btn btn-lg btn-info form-btn" href=<%= "/catalog/genre/create" %>>Create Genre</a>
                 </nav>
             </div>
         </div>
