--- a/inventory-app/views/all-tracks.ejs
+++ b/inventory-app/views/all-tracks.ejs
@@ -4,10 +4,10 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2">
+            <div class="col-sm-3">
                 <%- include("./partials/nav.ejs") %>
             </div>
-            <div class="col-md-6">
+            <div class="col">
                 <h1 class="rounded bg-secondary text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %></h1>
                 <table class="table table-borderd text-center table-hover table-dark">
                     <caption>List of all tracks</caption>
@@ -20,8 +20,8 @@
                     <tbody>
                         <% tracks?.forEach(track => { %>
                             <tr>
-                                <td ><a class="text-white btn btn-sm" href=<%= track.url %>><%= track.name %></a></td>
-                                <td class="bg-secondary"><a class="text-white btn btn-sm" href=<%= track.album_url %>><%= track.album_name %></a></td>
+                                <td ><a class="text-white btn btn-sm data-item" href=<%= track.url %>><%= track.name %></a></td>
+                                <td class="bg-secondary"><a class="text-white btn btn-sm data-item" href=<%= track.album_url %>><%= track.album_name %></a></td>
                             </tr>
                         <% }) %>
                     </tbody>
@@ -29,7 +29,7 @@
                 <hr>
                 <hr>
                 <nav class="nav nav-pills row nav-fills">
-                    <a class="col nav-item btn btn-lg btn-info" href=<%= "/catalog/track/create" %>>Create Create</a>
+                    <a class="col nav-item btn btn-lg btn-info form-btn" href=<%= "/catalog/track/create" %>>Create Create</a>
                 </nav>
             </div>
         </div>
