--- a/inventory-app/views/artist_detail.ejs
+++ b/inventory-app/views/artist_detail.ejs
@@ -4,10 +4,10 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2">
+            <div class="col-sm-3">
                 <%- include("./partials/nav.ejs") %>
             </div>
-            <div class="col-sm-5">
+            <div class="col">
                 <table class="table table-dark table-hover">
                     <caption>Artist Information Details</caption>
                     <thead>
@@ -40,21 +40,21 @@
                 </table>
                 <hr>
                 <hr>
-                <h3 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center">Albums List: </h3>
+                <h3 class="rounded bg-success text-white border border-primary text-center">Albums List: </h3>
                 <ul class="nav nav-pills nav-fill">
                     <% if(artist_albums?.length) { %>
                         <% artist_albums?.forEach(album => { %>
-                            <li class="text-primary nav-item border border-primary btn-lg mr-2 bg-warning"><a class="nav-link text-secondary" href=<%= "/catalog/album/"+album.id %> ><%= album.album %></a></li>
+                            <li class="text-primary nav-item border border-primary btn-lg m-2 bg-warning"><a class="nav-link text-secondary" href=<%= "/catalog/album/"+album.id %> ><%= album.album %></a></li>
                         <% }) %>
                     <% } else { %>
                         <li class="text-danger">There are no albums found from this artist</li>
                     <% } %>
                 </ul>
                 <hr>
-                <hr>
+                <br>
                 <nav class="nav nav-pills row nav-fills">
-                    <a class="col nav-item btn btn-lg btn-info" href=<%= artist.url+"/update" %>>Update</a>
-                    <a class="col nav-item btn btn-lg btn-danger" href=<%= artist.url+"/delete" %>>Delete</a>
+                    <a class="col nav-item btn btn-lg btn-info form-btn m-1" href=<%= artist.url+"/update" %>>Update</a>
+                    <a class="col nav-item btn btn-lg btn-danger form-btn m-1" href=<%= artist.url+"/delete" %>>Delete</a>
                 </nav>
             </div>
         </div>
