--- a/inventory-app/views/catalog.ejs
+++ b/inventory-app/views/catalog.ejs
@@ -4,28 +4,28 @@
     <body>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                     <%- include("./partials/nav.ejs") %>
                 </div>
-                <div class="col-md-6">
+                <div class="col">
                     <h1 class="rounded bg-success text-white border border-primary mt-2 pt-1 pb-1 text-center"><%= title %></h1>
                     <ul class="nav nav-pills nav-fill">
-                        <li class="nav-item m-1 btn btn-lg bg-secondary list-group-item">
-                            <a class="nav-link text-white" href="/catalog/albums">Number of total Albums: <span class="text-white"><%= results.count_albums %></span></a>
+                        <li class="nav-item m-1 btn btn-lg bg-secondary list-group-item catalog-nav">
+                            <a class="nav-link text-white catalog-nav-link" href="/catalog/albums">Number of total Albums: <span class="text-white"><%= results.count_albums %></span></a>
                         </li>
-                        <li class="nav-item m-1 btn btn-lg bg-secondary list-group-item">
-                            <a class="nav-link text-white" href="/catalog/artists">Number of total Artists: <span class="text-white"><%= results.count_artists %></span></a>
+                        <li class="nav-item m-1 btn btn-lg bg-secondary list-group-item catalog-nav">
+                            <a class="nav-link text-white catalog-nav-link" href="/catalog/artists">Number of total Artists: <span class="text-white"><%= results.count_artists %></span></a>
                         </li>
-                        <li class="nav-item m-1 btn btn-lg bg-secondary list-group-item">
-                            <a class="nav-link text-white" href="/catalog/genres">Number of total Genres: <span class="text-white"><%= results.count_genres %></span></a>
+                        <li class="nav-item m-1 btn btn-lg bg-secondary list-group-item catalog-nav">
+                            <a class="nav-link text-white catalog-nav-link" href="/catalog/genres">Number of total Genres: <span class="text-white"><%= results.count_genres %></span></a>
                         </li>
-                        <li class="nav-item m-1 btn btn-lg bg-secondary list-group-item">
-                            <a class="nav-link text-white" href="/catalog/tracks">Number of total Tracks: <span class="text-white"><%= results.count_tracks %></span></a>
+                        <li class="nav-item m-1 btn btn-lg bg-secondary list-group-item catalog-nav">
+                            <a class="nav-link text-white catalog-nav-link" href="/catalog/tracks">Number of total Tracks: <span class="text-white"><%= results.count_tracks %></span></a>
                         </li>
                     </ul>
                     <hr>
                     <hr>
-                    <h2 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center">Album counts from different Genres: </h2>
+                    <h2 class="rounded bg-success text-white border border-primary text-center">Album counts from different Genres: </h2>
                     <table class="table table-bordered table-primary">
                         <thead class="text-center">
                             <tr>
