--- a/inventory-app/views/partials/nav.ejs
+++ b/inventory-app/views/partials/nav.ejs
@@ -1,7 +1,7 @@
-<ul class="nav flex-column nav-pills pt-1 pb-2">
-    <li class="nav-link m-1 btn bg-secondary list-group-item"><a class="btn btn-md text-white" href="/catalog">Home</a></li>
-    <li class="nav-link m-1 btn bg-secondary list-group-item"><a class="btn btn-md text-white" href="/catalog/albums">Albums</a></li>
-    <li class="nav-link m-1 btn bg-secondary list-group-item"><a class="btn btn-md text-white" href="/catalog/genres">Genres</a></li>
-    <li class="nav-link m-1 btn bg-secondary list-group-item"><a class="btn btn-md text-white" href="/catalog/artists">Artists</a></li>
-    <li class="nav-link m-1 btn bg-secondary list-group-item"><a class="btn btn-md text-white" href="/catalog/tracks">All Tracks</a></li>
+<ul class="nav flex-column nav-pills pt-1 pb-2 position-fixed sidebar">
+    <li class="nav-link m-1 btn bg-secondary list-group-item nav-link-item"><a class="btn btn-md text-white nav-link-anchor" href="/catalog">Home</a></li>
+    <li class="nav-link m-1 btn bg-secondary list-group-item nav-link-item"><a class="btn btn-md text-white nav-link-anchor" href="/catalog/albums">Albums</a></li>
+    <li class="nav-link m-1 btn bg-secondary list-group-item nav-link-item"><a class="btn btn-md text-white nav-link-anchor" href="/catalog/genres">Genres</a></li>
+    <li class="nav-link m-1 btn bg-secondary list-group-item nav-link-item"><a class="btn btn-md text-white nav-link-anchor" href="/catalog/artists">Artists</a></li>
+    <li class="nav-link m-1 btn bg-secondary list-group-item nav-link-item"><a class="btn btn-md text-white nav-link-anchor" href="/catalog/tracks">All Tracks</a></li>
 </ul>
