--- a/inventory-app/views/delete_track.ejs
+++ b/inventory-app/views/delete_track.ejs
@@ -3,11 +3,11 @@
     <%- include("./partials/head.ejs") %>
 <body>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-2">
+        <div class="row form-row">
+            <div class="col-sm-3">
                 <%- include("./partials/nav.ejs") %>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 bg-secondary">
                 <h1 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %></h1>
                 <hr>
                 <hr>
@@ -20,7 +20,7 @@
                         <label for="admin">Admin Code (* required )</label>
                         <input class="form-control" type="text" id="admin" name="admin_code" />
                     </fieldset>
-                    <button class="btn btn-lg btn-block bg-danger text-white" type="submit">Delete</button>
+                    <button class="btn btn-lg btn-block bg-danger text-white form-btn" type="submit">Delete</button>
                 </form>
                 <br>
                 <br>
