all existing messages are now rendered
* messages are now retrieved from "messages" collection
* author name is now generated in message schema "virtual" functions
* posted date is now generated in message schema "virtual" functions
* included join club anchor tag

--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -5,29 +5,25 @@
     <div class="container">
         <%- include("./partials/navs.ejs") %>
         <h1><%= title %></h1>
-        <% users?.forEach(user => { %>
-            <% if(user?.messages?.length) { %>
-                <% user?.messages.forEach(msg => { %>
-                    <div class="msg-wrapper">
-                        <div class="top">
-                            <% if(loggedIn) { %>
-                                <span class="author"><%= msg.author %></span>
-                            <% } else { %>
-                                <span class="author">Annonymous</span>
-                            <% } %>
-                            <h2><%= msg.title %></h2>
-                        </div>
-                        <div class="bottom">
-                            <p><%= msg.body %></p>
-                            <% if(loggedIn) { %>
-                                <span class="d-posted"><%= msg.posted %></span>
-                            <% } else { %>
-                                <span class="d-posted">Annonymous</span>
-                            <% } %>
-                        </div>
-                    </div>
-                <% }) %>
-            <% } %>
+        <% messages?.forEach(msg => { %>
+            <div class="msg-wrapper">
+                <div class="top">
+                    <% if(loggedIn) { %>
+                        <span class="author"><%= msg.author_name %></span>
+                    <% } else { %>
+                        <span class="author">Annonymous</span>
+                    <% } %>
+                    <h2><%= msg.title %></h2>
+                </div>
+                <div class="bottom">
+                    <p><%= msg.body %></p>
+                    <% if(loggedIn) { %>
+                        <span class="d-posted"><%= msg.posted_date %></span>
+                    <% } else { %>
+                        <span class="d-posted">Annonymous</span>
+                    <% } %>
+                </div>
+            </div>
         <% }) %>
     </div>
 </body>
