--- a/views/partials/navs.ejs
+++ b/views/partials/navs.ejs
@@ -1,5 +1,6 @@
 <nav>
     <a href="/">Home</a>
+    <a href="/join-club">Join Club</a>
     <a href="/register">Register</a>
     <a href="/message-board">Create Message Board</a>
     <a href="/login">Login</a>
