delete functionality in place
* added a new property called "admin" in user schema
* only admin user can delete messages
* added a new form and route to become an admin
* added an another virtual function in message to identify deleting message id
* added a new route for delete message
* added fontawesome for delete button

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -7,6 +7,17 @@ body {
     background-color: honeydew;
 }
 
+.msg-wrapper {
+    position: relative;
+    width: 40vw;
+}
+
+.msg-wrapper i.fa-solid.fa-circle-xmark {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 .msg-wrapper .top,
 .msg-wrapper .bottom {
     display: flex;
